[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heir_py"
version = "0.0.1"
authors = [
    { name = "Jeremy Kun", email = "jkun@google.com" },
    { name = "Asra Ali", email = "asraa@google.com" },
    { name = "Alexander Viand", email = "alexander.viand@intel.com" },
]
description = "Python frontend for the HEIR compiler"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Topic :: Security :: Cryptography",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "numba>=0.61.0",
  "numpy>=2.0.2",
  "llvmlite>=0.44.0",
  "pybind11>=2.13.6",
  "pybind11_global>=2.13.6",
  "colorama>=0.4.6",
  "absl-py>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/google/heir"
Issues = "https://github.com/google/heir/issues"

[tool.hatch.build]
packages = ["heir"]

[tool.cibuildwheel]
build-frontend = "build"

[tool.pytest.ini_options]
norecursedirs = [
  ".git",
  "__pycache__",
  "bazel",
  "bazel-bin",
  "bazel-heir",
  "bazel-out",
  "bazel-testlogs",
  "docs",
  "external",
  "tests",
  "tools",
  "venv",
]

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
